:bento: add fonts and structure

--- a/assets/styles/fonts.styl
+++ b/assets/styles/fonts.styl
@@ -4,22 +4,14 @@
     src: url(../fonts/Bagnard/Bagnard.otf);
 }
 
-/* Office Code Pro */
 @font-face {
-    font-family: 'Office Light';
-    src: url(../fonts/OfficeCodePro/OfficeCodePro-Light.otf);
+    font-family: 'Bluu';
+    src: url(../fonts/BluuNext-Bold.otf);
 }
+
 @font-face {
-    font-family: 'Office Regular';
-    src: url(../fonts/OfficeCodePro/OfficeCodePro-Regular.otf);
-}
-@font-face {
-    font-family: 'Office Medium';
-    src: url(../fonts/OfficeCodePro/OfficeCodePro-Medium.otf);
-}
-@font-face {
-    font-family: 'Office Bold';
-    src: url(../fonts/OfficeCodePro/OfficeCodePro-Bold.otf);
+    font-family: 'Young';
+    src: url(../fonts/YoungSerif-Regular.otf);
 }
 
 /* Circular Std */
