--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -9,3 +9,15 @@
 a {
 	text-decoration: none;
 }
+
+.explosion-icon-container {
+	position absolute
+	top 50%
+	left 50%
+	transform translate(-50%, -50%)
+
+	.explosion-icon {
+		opacity 0
+		width 20px
+	}
+}
