add animations on description, responsive

--- a/assets/styles/main.styl
+++ b/assets/styles/main.styl
@@ -4,11 +4,16 @@
 @import './loco.styl'
 
 * {
-	user-select: none;
+	user-select: none
+}
+
+body {
+	overflow-x hidden
+	overflow-y hidden
 }
 
 a {
-	text-decoration: none;
+	text-decoration: none
 }
 
 .explosion-icon-container {
